@@ -16,6 +16,11 @@ version 0.2.0 (xx-xx-xxxx xx:xx UTC)
 General:
   * extended supported compilers to VS 2017 15.4.1 (#163)
   * several smaller changes, fixes, and code cleanup (#130, #136)
+Core:
+  * RakPeer:
+    * improve handling of disconnecting peers (#123 - SLNET_16)
+  * ReliabilityLayer:
+    * provide means to ensure sending outstanding ACKs (#123 - SLNET_16)
 Samples:
   General:
     * add validation for user provided port numbers/number of connections throughout applicable samples (#145)
@@ -26,7 +31,7 @@ Building:
     * changed default install location for SLikeNet to CMAKE_INSTALL_PREFIX-based include/lib directories (#54 - RAKNET_29, #67 - RAKNET_41)
 
 version 0.1.1 (xx-xx-xxxx xx:xx UTC)
-*** This release satisfies/processes 3 complete and 2 partial GitHub pull requests/issues
+*** This release satisfies/processes 3 complete and 3 partial GitHub pull requests/issues
 General:
   * several smaller changes, fixes, and code cleanup (#105, #156, #165 - RAKNET_29)
   * changed GitHub pull request markers to support pull requests from different GitHub forks (#105)
@@ -34,10 +39,12 @@ General:
   * corrected text encoding throughout all files (#116)
   * several small documentation updates (#105, #112 - SLNET_10, #168)
 Core:
-  FileListTransfer
+  FileListTransfer:
     * provide compile time setting to limit the max file size for retrieving files (#168 - SLNET_19)
   RakNetSocket2:
     * fixed certain error messages producing garbled output in unicode configurations (#119)
+  RakPeer:
+    * improve handling of disconnecting peers (#170 - SLNET_16)
   SocketLayer:
     * fixed certain error messages producing garbled output in unicode configurations (#119)
   TCPInterface:
